<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dialogBlurRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blurEnterRad"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBlurThreshold" />

    <EditText
        android:id="@+id/dialogBlurAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blurEnterAm"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogBlurThreshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blurEnterThreshold"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBlurAmount" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBlurRadius">


        <ImageButton
            android:id="@+id/dialogEntBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/alertBack"
            app:srcCompat="@drawable/ic_accept" />

        <ImageButton
            android:id="@+id/dialogCanBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="52dp"
            android:backgroundTint="@color/alertBack"
            app:srcCompat="@drawable/ic_cross" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>