<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RedactImageActivity">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="561dp"
        android:layout_margin="40dp"
        android:layout_marginTop="40dp"
        android:scaleType="center"
        opencv:layout_constraintEnd_toEndOf="parent"
        opencv:layout_constraintStart_toStartOf="parent"
        opencv:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonTurn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_refresh" />

    <ImageButton
        android:id="@+id/buttonFilters"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        android:text="@string/redactFilters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTurn"
        app:srcCompat="@drawable/ic_filters" />

    <ImageButton
        android:id="@+id/buttonReturnOriginal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBlur"
        app:srcCompat="@drawable/ic_back" />

    <ImageButton
        android:id="@+id/buttonScaling"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        android:text="@string/redactScale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFilters"
        app:srcCompat="@drawable/ic_search" />

    <ImageButton
        android:id="@+id/buttonBlur"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        android:text="@string/blurANDshurp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonScaling"
        app:srcCompat="@drawable/ic_tear" />

    <ImageButton
        android:id="@+id/buttonSave"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReturnOriginal"
        app:srcCompat="@drawable/ic_seo_and_web" />


</androidx.constraintlayout.widget.ConstraintLayout>